Support only JDK 11+